fixed start/stop
