# spec/openapi.yaml
@@ -175,15 +175,20 @@ components:
             $ref: "#/components/schemas/Container"
       required:
       - state
+      - containers
     Container:
       type: object
       properties:
+        id:
+          type: string
         name:
           type: string
         status:
           $ref: "#/components/schemas/ContainerStatus"
       required:
+      - id
       - name
+      - status
     ContainerStatus:
       type: object
       properties:
